--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
             <version>2.4.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-hateoas</artifactId>
+        </dependency>
+
         <!-- Validação com Jakarta -->
         <dependency>
             <groupId>jakarta.validation</groupId>
