Frontend CRUD de produtos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ArgosAI-Sprint3
 spring.datasource.url=jdbc:oracle:thin:@//oracle.fiap.com.br:1521/orcl
 spring.datasource.username=rm89162
-spring.datasource.password=280400
+spring.datasource.password=280444
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -13,5 +13,10 @@ spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.pool-name=HikariCP
 server.error.include-message=always
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
 
 
