--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ArgosAI-Sprint3
 spring.datasource.url=jdbc:oracle:thin:@//oracle.fiap.com.br:1521/orcl
 spring.datasource.username=rm89162
-spring.datasource.password=280444
+spring.datasource.password=fiap24
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -23,4 +23,5 @@ springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 
 
-
+spring.security.user.name=rm89162
+spring.security.user.password=1qaz
