Internacionalização para en_US

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,7 @@ springdoc.swagger-ui.path=/swagger-ui.html
 
 spring.security.user.name=rm89162
 spring.security.user.password=1qaz
+spring.messages.basename=i18n/messages
+spring.web.locale=pt-br
+
+spring.messages.encoding=UTF-8
