--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,20 @@ spring.messages.basename=i18n/messages
 spring.web.locale=pt-br
 
 spring.messages.encoding=UTF-8
+
+# Configurações do RabbitMQ
+spring.rabbitmq.host=gull.rmq.cloudamqp.com
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=iuofyatl
+spring.rabbitmq.password=jZuuPnahxl5YbeZ7pb_yjtJ1LYtdq1PV
+spring.rabbitmq.virtual-host=iuofyatl
+spring.rabbitmq.ssl.enabled=true
+
+
+# Configurações do E-mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=argos.ai.fiap@gmail.com
+spring.mail.password=gmbe wglo bilx abot
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
