Monitoramento com Spring Actuator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,27 +22,27 @@ spring.thymeleaf.encoding=UTF-8
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 
-
-spring.security.user.name=rm89162
-spring.security.user.password=1qaz
 spring.messages.basename=i18n/messages
 spring.web.locale=pt-br
 
 spring.messages.encoding=UTF-8
 
-# Configurações do RabbitMQ
 spring.rabbitmq.host=gull.rmq.cloudamqp.com
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=iuofyatl
 spring.rabbitmq.password=jZuuPnahxl5YbeZ7pb_yjtJ1LYtdq1PV
 spring.rabbitmq.virtual-host=iuofyatl
+management.health.rabbit.enabled=false
 spring.rabbitmq.ssl.enabled=true
 
-
-# Configurações do E-mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=argos.ai.fiap@gmail.com
 spring.mail.password=gmbe wglo bilx abot
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+management.endpoints.web.exposure.include=*
+management.endpoints.web.base-path=/actuator
+management.endpoint.health.show-details=always
+
