--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,14 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: '17'
-
+          distribution: 'temurin'
+          java-package: jdk
+          architecture: x64
+          check-latest: false
+          server-id: github
+          server-username: GITHUB_ACTOR
+          server-password: GITHUB_TOKEN
+          overwrite-settings: true
       - name: Configure environment variables from secrets
         env:
           ORACLE_DB_USER: ${{ secrets.ORACLE_DB_USER }}
