--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,10 @@ jobs:
 
       - name: Give execute permission to Maven wrapper
         run: chmod +x ./mvnw
+
+      - name: Run application tests
+        run: ./mvnw test -Dspring.profiles.active=test
+   
       
       - name: Build with Maven
         run: ./mvnw clean install
