--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ArgosAI-Sprint3
 spring.datasource.url=jdbc:oracle:thin:@//oracle.fiap.com.br:1521/orcl
-spring.datasource.username=rm89162
-spring.datasource.password=fiap24
+spring.datasource.username=${ORACLE_DB_USER}
+spring.datasource.password=${ORACLE_DB_PASSWORD}
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -24,21 +24,20 @@ springdoc.swagger-ui.path=/swagger-ui.html
 
 spring.messages.basename=i18n/messages
 spring.web.locale=pt-br
-
 spring.messages.encoding=UTF-8
 
 spring.rabbitmq.host=gull.rmq.cloudamqp.com
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=iuofyatl
-spring.rabbitmq.password=jZuuPnahxl5YbeZ7pb_yjtJ1LYtdq1PV
+spring.rabbitmq.username=${RABBITMQ_USER}
+spring.rabbitmq.password=${RABBITMQ_PASSWORD}
 spring.rabbitmq.virtual-host=iuofyatl
 management.health.rabbit.enabled=false
 spring.rabbitmq.ssl.enabled=true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=argos.ai.fiap@gmail.com
-spring.mail.password=gmbe wglo bilx abot
+spring.mail.username=${GMAIL_USER}
+spring.mail.password=${GMAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
@@ -46,3 +45,4 @@ management.endpoints.web.exposure.include=*
 management.endpoints.web.base-path=/actuator
 management.endpoint.health.show-details=always
 
+openai.api.key=${OPENAI_API_KEY}
