--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,7 +30,7 @@ spring.rabbitmq.host=gull.rmq.cloudamqp.com
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=${RABBITMQ_USER}
 spring.rabbitmq.password=${RABBITMQ_PASSWORD}
-spring.rabbitmq.virtual-host=iuofyatl
+spring.rabbitmq.virtual-host=${RABBITMQ_USER}
 management.health.rabbit.enabled=false
 spring.rabbitmq.ssl.enabled=true
 
