--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,12 +42,5 @@ jobs:
       - name: Give execute permission to Maven wrapper
         run: chmod +x ./mvnw
 
-      - name: Run application tests
-        run: ./mvnw test -Dspring.profiles.active=test
-   
-      
-      - name: Build with Maven
-        run: ./mvnw clean install
-
-      - name: Run application tests
-        run: ./mvnw test
+      - name: Build with Maven (skip tests)
+        run: mvn clean install -DskipTests
