--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,10 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: '17'
+          distribution: 'temurin'  # Adicione essa linha
+          java-package: jdk
+          architecture: x64
+          check-latest: false
 
       - name: Cache Maven packages
         uses: actions/cache@v2
