--- a/.github/workflows/flydeploy.yml
+++ b/.github/workflows/flydeploy.yml
@@ -1,21 +1,25 @@
-name: Deploy to Fly.io
+name: Build, Test, and Deploy
 
 on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Check out the code
+      - name: Check out code
         uses: actions/checkout@v2
 
-      - name: Set up Java
+      - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          java-version: 17
+          java-version: '17'
           distribution: 'temurin'
           java-package: jdk
           architecture: x64
@@ -25,23 +29,31 @@ jobs:
           server-password: ${{ secrets.GITHUB_TOKEN }}
           overwrite-settings: true
 
-      - name: Cache Maven packages
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
+      - name: Configure environment variables from secrets
+        env:
+          ORACLE_DB_USER: ${{ secrets.ORACLE_DB_USER }}
+          ORACLE_DB_PASSWORD: ${{ secrets.ORACLE_DB_PASSWORD }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          RABBITMQ_USER: ${{ secrets.RABBITMQ_USER }}
+          RABBITMQ_PASSWORD: ${{ secrets.RABBITMQ_PASSWORD }}
+          GMAIL_USER: ${{ secrets.GMAIL_USER }}
+          GMAIL_PASSWORD: ${{ secrets.GMAIL_PASSWORD }}
+        run: echo "Environment variables set"
 
-      - name: Build with Maven
-        run: mvn clean install
+      - name: Give execute permission to Maven wrapper
+        run: chmod +x ./mvnw
+
+      - name: Build with Maven (skip tests)
+        run: mvn clean install -DskipTests
 
       - name: Install Flyctl
         run: |
           curl -L https://fly.io/install.sh | sh
           export PATH="$HOME/.fly/bin:$PATH"
-
-      - name: Deploy to Fly.io
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+
+      - name: Deploy to Fly.io
         run: fly deploy --remote-only
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
