--- a/.github/workflows/flydeploy.yml
+++ b/.github/workflows/flydeploy.yml
@@ -50,25 +50,19 @@ jobs:
         run: |
           curl -L https://fly.io/install.sh | sh
           echo "Adding Flyctl to PATH"
-          echo 'export PATH="$HOME/.fly/bin:$PATH"' >> $GITHUB_ENV
+          echo "$HOME/.fly/bin" >> $GITHUB_PATH
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
 
       - name: Verify Flyctl installation
-        run: |
-          source $GITHUB_ENV
-          fly version
+        run: fly version
 
       - name: Authenticate Flyctl
-        run: |
-          source $GITHUB_ENV
-          fly auth whoami
+        run: fly auth whoami
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
 
       - name: Deploy to Fly.io
-        run: |
-          source $GITHUB_ENV
-          fly deploy --remote-only --verbose
+        run: fly deploy --remote-only --verbose
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
