--- a/.github/workflows/flydeploy.yml
+++ b/.github/workflows/flydeploy.yml
@@ -44,15 +44,13 @@ jobs:
         run: chmod +x ./mvnw
 
       - name: Build with Maven (skip tests)
-        run: ./mvnw clean install -DskipTests
+        run: mvn clean install -DskipTests
 
       - name: Install Flyctl
         run: |
           curl -L https://fly.io/install.sh | sh
-          echo "Adding Flyctl to PATH"
+          echo "Add Flyctl to PATH"
           echo "$HOME/.fly/bin" >> $GITHUB_PATH
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
 
       - name: Verify Flyctl installation
         run: fly version
@@ -63,6 +61,6 @@ jobs:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
 
       - name: Deploy to Fly.io
-        run: fly deploy --remote-only --verbose
+        run: fly deploy --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
