--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,5 @@
-name: Build, Test, and Deploy
+
+name: Build and Test
 
 on:
   push:
@@ -9,7 +10,7 @@ on:
       - main
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -25,10 +26,9 @@ jobs:
           architecture: x64
           check-latest: false
           server-id: github
-          server-username: ${{ github.actor }}
-          server-password: ${{ secrets.GITHUB_TOKEN }}
+          server-username: GITHUB_ACTOR
+          server-password: GITHUB_TOKEN
           overwrite-settings: true
-
       - name: Configure environment variables from secrets
         env:
           ORACLE_DB_USER: ${{ secrets.ORACLE_DB_USER }}
@@ -45,22 +45,3 @@ jobs:
 
       - name: Build with Maven (skip tests)
         run: mvn clean install -DskipTests
-
-      - name: Install Flyctl
-        run: |
-          curl -L https://fly.io/install.sh | sh
-          echo "Add Flyctl to PATH"
-          echo "$HOME/.fly/bin" >> $GITHUB_PATH
-
-      - name: Verify Flyctl installation
-        run: fly version
-
-      - name: Authenticate Flyctl
-        run: fly auth whoami
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-
-      - name: Deploy to Fly.io
-        run: fly deploy --remote-only
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
